# veilbit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: veilbit.h
src/: bmp.c  jpeg.c  main.c  png.c  veilbit.c
